[tool.poetry]
name = "nautobot-netops-commit"
version = "0.1.0"
description = "Provides commit capabilities for SSoT automation"
authors = ["Alexander Herr"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "nautobot_netops_commit"}]

[tool.poetry.dependencies]
python = "^3.9"
nautobot = "^1.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
